# test

./: Cargo.toml
Qt-StrongPasswordGenerator/: StrongPasswordGenerator.pro  mainwindow.cpp  passwordutils.cpp  passwordutils.h
adapter/: Cargo.toml
adapter/src/: lib.rs
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  main.rs
libpassgen/src/: lib.rs
passgencore/: Cargo.toml
passgencore/src/: lib.rs
qtgui/: CMakeLists.txt  adapter.cpp  adapter.h  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
shredder/: CMakeLists.txt  Clipboard.cpp  Config.cpp  Config.h  PasswordGenerator.cpp  Random.cpp  adapter.h  main.cpp  rsc.qrc  shredder.pro  widget.cpp  widget.h  widget.ui
